# boe-mpt-vacancies

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
reports/figures/: forecast_latest.csv
src/boe_vac/: __init__.py  forecast.py  ingest.py  parse.py  transform.py  viz.py
tests/: test_ingest.py  test_parse.py  test_smoke.py  test_transform.py
